# SKYPRO_ToDoList

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: action.yaml
deploy/: .env  docker-compose.yaml
src/: pytest.ini
src/bot/: admin.py  models.py  serializers.py  urls.py  views.py
src/bot/migrations/: 0001_initial.py  0002_tguser_is_verified_alter_tguser_tg_chat_id_and_more.py  0003_alter_tguser_tg_chat_id_alter_tguser_tg_user_id.py  0004_alter_tguser_tg_chat_id_alter_tguser_tg_user_id.py
src/bot/tg/: client.py  dc.py
src/core/: admin.py  models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_user_options.py
src/goals/: admin.py  filters.py  permissions.py  serializers.py  urls.py
src/goals/migrations/: 0001_initial.py  0002_goal.py  0003_alter_goal_description.py  0004_alter_goal_category_alter_goal_user_goalcomment.py  0005_alter_goalcategory_user.py  0006_alter_goal_description.py  0007_alter_goal_description.py  0008_alter_goal_created_alter_goal_updated_and_more.py  0009_board_goalcategory_board_boardparticipant.py  0010_create_new_objects.py  0011_alter_goalcategory_board.py  0012_alter_boardparticipant_options.py
src/goals/models/: __init__.py  basemixin.py  board.py  board_participant.py  dates.py  goal.py  goal_category.py  goal_comment.py
src/goals/serializers/: __init__.py  board.py  goal.py  goal_category.py  goal_comment.py
src/goals/views/: __init__.py  board.py  goal.py  (+2 more)
src/tests/: conftest.py  factories.py  fixtures.py
src/todolist/: settings.py  urls.py
(+13 files in other folders)
